# smf-praxis

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  CAPABILITIES.md  DASHBOARD-SCOPE.md  Dockerfile  FRAMEWORK.md  M365-SETUP.md  PROGRESS.md  README.md  RELEASING.md  conftest.py  demo.py  docker-compose.yml  feature_list.json  install.ps1  install.sh  mutation.toml  pyproject.toml  test_dict_access.py  verify_bugs.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  release.yml
.hermes/plans/: 2026-07-13_212538-phase-5-artifact-studio.md
benchmarks/: bench_retrieve.py
docs/: DEPLOYMENT.md  INSTALL.md  OWASP_AGENTIC_COVERAGE.md  PACKS.md  QUICKSTART.md  api-v1.md  durable-professional-workflows.md  professional-evidence-authority.md  professional-identity-data-governance.md  professional-workspaces.md
docs/adr/: ADR-001-professional-workspace-model.md  ADR-002-evidence-claim-ledger.md  ADR-003-frontend-preact-typescript.md  ADR-004-integration-boundary.md  ADR-005-organization-rbac.md
docs/artifacts/: README.md  phase-5-architecture.md
docs/harness/: clean-state-checklist.md  evaluator-rubric.md  h05-calibration.json  h05-maker-checker-design.md  loop-engineering.md  quality-document.md  session-handoff.md
hybridagent/: __init__.py  a2a_client.py  agent.py  agent_service.py  api_contract.py  auth_gate.py  authn.py  authority.py  authz.py  benchmark.py  bm25.py  bootstrap.py  broker.py  broker_client.py  browser.py  channels_inbound.py  chat_agent.py  checkpoints.py  claims.py  cli.py  compliance.py  config.py  consolidation.py  content_guard.py  context.py  context_profile.py  contradiction.py  cron.py  custody.py  daemon.py  data_policy.py  debate.py  deepthink.py  demo.py  embeddings.py  errors.py  escalation.py  eval_history.py  evals.py  evidence.py  (+69 more)
hybridagent/artifacts/: __init__.py  bundles.py  models.py  render_common.py  render_docx.py  render_json.py  render_markdown.py  render_pdf.py  render_pptx.py  render_xlsx.py  renderers.py  service.py  validation.py  versions.py
hybridagent/jurisdictions/: __init__.py  ct.py  fl.py  ga.py  ma.py  md.py  nj.py  ny.py  oh.py  pa.py  sc.py  tn.py  va.py  wv.py
hybridagent/packs/general/: pack.json
hybridagent/packs/homeschool/: knowledge.md  pack.json
hybridagent/seed/: praxis_overview.md
hybridagent/verticals/: __init__.py  registry.py
hybridagent/verticals/architecture/: __init__.py  authority.py
hybridagent/verticals/dental/: __init__.py  authority.py
hybridagent/verticals/education/: __init__.py  authority.py
hybridagent/verticals/forensic_engineering/: __init__.py  authority.py
hybridagent/verticals/legal/: __init__.py  authority.py
hybridagent/verticals/medical/: __init__.py  authority.py
hybridagent/web/: board.css  board.js  consolidation.css  consolidation.js  cron.css  cron.js  friendliness.css  friendliness.js  growth.css  growth.js  home.css  home.js  inference.css  inference.js  knowledge.css  knowledge.js  manifest.webmanifest  memory.css  memory.js  metrics.css  metrics.js  onboard.css  onboard.js  palette.css  palette.js  run-graph.css  run-graph.js  safety.css  safety.js  settings.css  settings.js  shell.css  shell.js  sw.js
scripts/: calibrate_h05_verifier.py  check_architecture.py  harness_simplify.py  mutation_test.py  verify-release.sh
tests/: artifact_helpers.py  test_a2a.py  test_a2a_client.py  test_agent.py  test_api_contract.py  test_approval_resume_fixes.py  test_architecture.py  test_artifact_models.py  test_artifact_release.py  test_artifact_renderers.py  test_artifact_versions.py  test_authn.py  test_authority.py  test_authz.py  test_bm25.py  test_broker_hardening.py  test_broker_mutation_guard.py  test_browser.py  test_bughunt_regressions.py  test_bugs.py  test_chat.py  test_checkpoints.py  test_claims.py  test_cli.py  test_cli_smoke.py  test_cli_smoke2.py  test_compliance.py  test_compliance_modes.py  test_concurrency.py  test_config_migrate.py  test_consolidation.py  test_content_guard.py  test_context.py  test_context_profile.py  test_coverage_phase_ad.py  test_cron.py  test_custody.py  test_daemon.py  test_data_policy.py  test_debate.py  (+95 more)
tests/golden/: artifact-sample.json  artifact-sample.md
