[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "praxis-agent"
version = "0.1.0"
description = "Hybrid OpenClaw + Hermes autonomous AI colleague (proactive + governed)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "SMF Works" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]
# Optional document parsers (RAG ingestion). Core stays dependency-free; install
# this extra to ingest PDF / Word / PowerPoint / Excel / Outlook .msg files.
docs = [
    "pypdf>=4.0",
    "python-docx>=1.1",
    "python-pptx>=0.6",
    "openpyxl>=3.1",
    "extract-msg>=0.48",
]
# Alternative single-dependency converter that handles most rich formats.
markitdown = ["markitdown>=0.0.1a2"]
# Optional multimodal intake (images / audio / video).
multimodal = [
    "Pillow>=10.0",
    "openai-whisper>=20231117",
    "opencv-python>=4.8",
]

[project.scripts]
praxis = "hybridagent.cli:main"

[tool.setuptools]
packages = ["hybridagent"]
