[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "praxis-agent"
dynamic = ["version"]
description = "Praxis — proactive, governed autonomous AI colleague"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "SMF Works" }]
keywords = ["ai", "agent", "autonomous", "llm", "governance", "rag", "mcp", "assistant"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/smfworks/smf-praxis"
Repository = "https://github.com/smfworks/smf-praxis"
Issues = "https://github.com/smfworks/smf-praxis/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.8",
    "hypothesis>=6.0",
]
# Mutation testing for the governance core (run on demand, never in the matrix).
# cosmic-ray is cross-platform and modern-Python clean (mutmut needs WSL on
# Windows; mutatest is broken on 3.11+). See scripts/mutation_test.py.
mutation = ["cosmic-ray>=8.3"]
# Optional document parsers (RAG ingestion). Core stays dependency-free; install
# this extra to ingest PDF / Word / PowerPoint / Excel / Outlook .msg files.
docs = [
    "pypdf>=4.0",
    "python-docx>=1.1",
    "python-pptx>=0.6",
    "openpyxl>=3.1",
    "extract-msg>=0.48",
]
# Alternative single-dependency converter that handles most rich formats.
markitdown = ["markitdown>=0.0.1a2"]
# Optional multimodal intake (images / audio / video).
multimodal = [
    "Pillow>=10.0",
    "openai-whisper>=20231117",
    "opencv-python>=4.8",
]
# Faster vector search for large knowledge bases (optional; pure-Python fallback
# is used when absent).
fast = ["numpy>=1.24"]
# Model Context Protocol adapter — expose Praxis tools as an MCP server and/or
# consume external MCP servers. Optional; hybridagent.mcp_adapter degrades
# gracefully (clear ImportError) when this extra is not installed.
mcp = ["mcp>=1.0"]
# Governed computer/browser-use tools (navigate is read, click/type are held).
# Navigation/read fall back to a stdlib fetch when absent; interaction needs a
# real browser, so this installs Playwright.
browser = ["playwright>=1.40"]
# OS-keychain storage for provider API keys (Windows Credential Manager, macOS
# Keychain, Linux Secret Service). Without it, keys fall back to a gitignored file.
keyring = ["keyring>=24"]

[project.scripts]
praxis = "hybridagent.cli:main"

[tool.setuptools]
include-package-data = true

# Include every importable hybridagent subpackage. An explicit
# `packages = ["hybridagent"]` omits nested policy modules from wheels while
# source-tree and editable installs continue to resolve them.
[tool.setuptools.packages.find]
where = ["."]
include = ["hybridagent*"]

# The Command Deck dashboard loads its JS/CSS from hybridagent/web/ at runtime
# (daemon._serve_static reads Path(__file__).parent / "web"). These are data
# files, not modules, so they must be declared here or a wheel install ships a
# broken dashboard (editable installs mask this by pointing back at the source).
[tool.setuptools.package-data]
hybridagent = ["web/*", "seed/*", "packs/*/pack.json", "packs/*/*.md", "packs/*/*.txt"]

# Single-source the version from hybridagent.__version__ (read statically).
[tool.setuptools.dynamic]
version = { attr = "hybridagent.__version__" }

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# pyflakes (F), pycodestyle errors (E), unused/import hygiene (I), bugbears (B).
select = ["E", "F", "B", "I"]
ignore = ["E501"]  # line length is enforced softly; many descriptive strings run long

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
# Pragmatic strictness: catch None-handling and obvious type errors without
# requiring full annotations on a fast-moving codebase. warn_unused_ignores is
# off because the optional-dependency imports carry `# type: ignore` markers
# that are only "unused" under ignore_missing_imports but matter when the extra
# is installed and mypy runs strict.
warn_redundant_casts = true
no_implicit_optional = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.coverage.run]
source = ["hybridagent"]
# Omit modules that cannot be meaningfully unit-tested in the CI `[dev]`
# environment because they require an UNINSTALLED optional extra or interactive
# IO. They're exercised by integration/install tests and manual runs, not the
# unit suite, so counting their uncovered lines only dilutes the core metric:
#   tui.py         interactive terminal loop
#   onboard.py     interactive provider/model wizard (stdin)
#   browser.py     needs the [browser] extra (Playwright)
#   multimodal.py  needs the [multimodal] extra (Pillow / whisper / opencv)
#   mcp_adapter.py needs the [mcp] extra
#   voice.py       needs configured TTS/STT providers
omit = [
    "hybridagent/tui.py",
    "hybridagent/onboard.py",
    "hybridagent/browser.py",
    "hybridagent/multimodal.py",
    "hybridagent/mcp_adapter.py",
    "hybridagent/voice.py",
]

[tool.coverage.report]
# CLI dispatch is covered by smoke tests; exclude the interactive TUI loop and
# defensive branches that only fire on real network/provider failures.
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
